# claims-processing-system

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
ai-artifacts/: 02cf7d93-204d-4593-976e-75b948bf4d3e.jsonl  067d37a9-2b4e-4921-a422-30d4387c211f.jsonl  07a0127f-123b-41e7-b55c-5338de1be2c9.jsonl  080ea66c-bba3-45aa-a7e0-ee29c168cb22.jsonl  0b4b5db5-2405-429d-9810-a4028b870d5f.jsonl  1359b7bf-e444-4bfd-af8a-207cdd1d6695.jsonl  1fbca474-f428-4f84-a426-be2b2c64bc61.jsonl  211f6a2f-f388-4d78-a41c-c500e7fe1a01.jsonl  248bf301-6631-45f6-b909-447a014f9a3d.jsonl  26fb2fc3-9056-4f8d-a1f8-6a5c351cc278.jsonl  29f599d7-64b2-4763-b308-b4e186ea6dbf.jsonl  2bf0fad9-f54e-480b-8a62-0ef93931955d.jsonl  3a2a56a2-1b21-4304-9c1a-d1e6cd345d43.jsonl  3a4487af-3f99-40ef-8a4c-ab53bc0c18b8.jsonl  3cd2c1ac-dd9e-426b-8937-73d18cfa4dd6.jsonl  3ec96df9-fede-4357-b992-3dfaa92c55d2.jsonl  467b2536-c742-4456-8bc9-a12b85648247.jsonl  471dbec9-d9d7-4191-a85f-b730ea70f416.jsonl  49027b91-721b-40d6-82da-db577b3be868.jsonl  4c4ab289-08ff-4eed-aaa5-3c421e316ad0.jsonl  4f5d16c6-a614-44de-afd5-398946329ad0.jsonl  56740185-3449-4ab6-acd6-17decabb83f2.jsonl  5a47334b-f21f-4082-bf99-c75303dcff2e.jsonl  5bb77aaa-eae1-47b3-a023-42087cf68bbd.jsonl  5ed57e0c-7d3a-4473-a4f4-935110f0bce9.jsonl  67bf279d-f0da-4442-acff-fbd099f7f13f.jsonl  72db5c62-02c4-4143-a0b2-e8e2ba09b9b9.jsonl  73bb7aa8-26bc-46f9-92e6-d4c0bcb08cf3.jsonl  75368500-8371-4beb-82fc-8768168604c1.jsonl  75a52006-6472-4773-9ab4-abbeb3ce324a.jsonl  7c98ef9f-62a7-4631-babf-c43f82ef1fd1.jsonl  7cd01914-02f9-4d95-bfb5-d7f0461eff9f.jsonl  (+30 more)
app/: __init__.py  (+3 more)
(+83 files in other folders)
